--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <button>save new cookie</button>
+    <button id="get-cookie">get username cookie</button>
     <script src="./script.js"></script>
   </body>
 </html>
